--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
 name = "first-class-variants"
-version = "0.0.8"
+version = "1.0.0"
 authors = ["Ari Lotter <arilotter@gmail.com>"]
 edition = "2018"
+description = "A procedural macro to generate first-class structs for enum variants"
+license = "MIT"
 
 
 [dependencies]
